# agent-delivery-lab

./: README.md  pyproject.toml
examples/: run_readiness_demo.py
src/agent_delivery_lab/: __init__.py  delivery_readiness.py
tests/: test_delivery_readiness.py
