[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-delivery-lab"
version = "0.1.0"
description = "Practical patterns for delivering reliable AI and agent systems"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Jason Song" }
]
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
